[package]
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
readme = "README.md"
name = "play-nucleo"
version = "0.1.0"

[dependencies]
stm32f30x-hal = "0.2.0"

[dev-dependencies]
# not propagated
# used to compile examples, tests, benchmarks
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
stm32f30x = "0.8.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
