[package]
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2018"
readme = "README.md"
name = "stm32f302r8-nucleo"
version = "0.1.0"

[dependencies]
hal = { version = "0.24.0", package = "alt-stm32f30x-hal", features = ["rt", "stm32f302"] }
embedded-hal = "0.2.3"
# cortex-m-rtic = { version = "0.5.3", git = "https://github.com/rtic-rs/cortex-m-rtic", rev = "cfd5f4785e9c2ae88e666d1fb94a3488904a87f5", optional = true}
cortex-m-rtic = { version = "0.5.3", optional = true}
cortex-m-rt = { version = "0.6.10", optional = true }
cortex-m-semihosting = { version = "0.3.3", optional = true }
panic-semihosting = { version = "0.5.1", optional = true }
panic-halt = "0.2.0"
debounced-pin = "0.3.0"
asm-delay = { version = "0.9"}
cortex-m = { version = ">=0.6.2,<0.7" }
nb =  {version = "0.1.1", optional = true}
stm32f3 = {version = "0.11.0"}


[dev-dependencies]
# not propagated
# used to compile examples, tests, benchmarks
stm32f30x = "0.8.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[features]
with_device = ["with_rt", "stm32f3/rt", "stm32f3/stm32f302"]
with_semihosting = ["cortex-m-semihosting", "panic-semihosting"]
with_rtic = ["cortex-m-rtic"]
with_rt = ["cortex-m-rt"]
default = ["with_rtic", "with_device", "nb"]
